--- a/web/i18n/ja-JP/plugin-trigger.json
+++ b/web/i18n/ja-JP/plugin-trigger.json
@@ -85,6 +85,9 @@
   "subscription.empty.title": "サブスクリプションがありません",
   "subscription.list.addButton": "追加",
   "subscription.list.item.actions.delete": "削除",
+  "subscription.list.item.actions.edit.error": "サブスクリプションの更新に失敗しました",
+  "subscription.list.item.actions.edit.success": "サブスクリプションが正常に更新されました",
+  "subscription.list.item.actions.edit.title": "サブスクリプションを編集",
   "subscription.list.item.actions.deleteConfirm.cancel": "キャンセル",
   "subscription.list.item.actions.deleteConfirm.confirm": "削除",
   "subscription.list.item.actions.deleteConfirm.confirmInputPlaceholder": "確認するには「{{name}}」と入力してください。",
