--- a/web/i18n/zh-Hans/plugin-trigger.json
+++ b/web/i18n/zh-Hans/plugin-trigger.json
@@ -85,6 +85,9 @@
   "subscription.empty.title": "暂无订阅",
   "subscription.list.addButton": "添加",
   "subscription.list.item.actions.delete": "删除",
+  "subscription.list.item.actions.edit.error": "更新订阅失败",
+  "subscription.list.item.actions.edit.success": "订阅更新成功",
+  "subscription.list.item.actions.edit.title": "编辑订阅",
   "subscription.list.item.actions.deleteConfirm.cancel": "取消",
   "subscription.list.item.actions.deleteConfirm.confirm": "确认删除",
   "subscription.list.item.actions.deleteConfirm.confirmInputPlaceholder": "输入 \"{{name}}\" 确认",
