--- a/web/i18n/en-US/dataset-documents.json
+++ b/web/i18n/en-US/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Norwegian",
   "metadata.languageMap.pl": "Polish",
   "metadata.languageMap.pt": "Portuguese",
+  "metadata.languageMap.ro": "Romanian",
   "metadata.languageMap.ru": "Russian",
   "metadata.languageMap.sv": "Swedish",
   "metadata.languageMap.th": "Thai",
