--- a/web/i18n/en-US/explore.json
+++ b/web/i18n/en-US/explore.json
@@ -12,6 +12,7 @@
   "category.Entertainment": "Entertainment",
   "category.HR": "HR",
   "category.Programming": "Programming",
+  "category.Recommended": "Recommended",
   "category.Translate": "Translate",
   "category.Workflow": "Workflow",
   "category.Writing": "Writing",
