--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -971,6 +971,7 @@
   "singleRun.startRun": "Start Run",
   "singleRun.testRun": "Test Run",
   "singleRun.testRunIteration": "Test Run Iteration",
+  "singleRun.testRunLoop": "Test Run Loop",
   "tabs.addAll": "Add all",
   "tabs.agent": "Agent Strategy",
   "tabs.allAdded": "All added",
