--- a/web/i18n/en-US/dataset.json
+++ b/web/i18n/en-US/dataset.json
@@ -154,6 +154,8 @@
   "retrieval.hybrid_search.description": "Execute full-text search and vector searches simultaneously, re-rank to select the best match for the user's query. Users can choose to set weights or configure to a Rerank model.",
   "retrieval.hybrid_search.recommend": "Recommend",
   "retrieval.hybrid_search.title": "Hybrid Search",
+  "retrieval.invertedIndex.description": "Inverted Index is a structure used for efficient retrieval. Organized by terms, each term points to documents or web pages containing it.",
+  "retrieval.invertedIndex.title": "Inverted Index",
   "retrieval.keyword_search.description": "Inverted Index is a structure used for efficient retrieval. Organized by terms, each term points to documents or web pages containing it.",
   "retrieval.keyword_search.title": "Inverted Index",
   "retrieval.semantic_search.description": "Generate query embeddings and search for the text chunk most similar to its vector representation.",
