--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -4,6 +4,7 @@
   "blocks.assigner": "Variable Assigner",
   "blocks.code": "Code",
   "blocks.datasource": "Data Source",
+  "blocks.datasource-empty": "Empty Data Source",
   "blocks.document-extractor": "Doc Extractor",
   "blocks.end": "Output",
   "blocks.http-request": "HTTP Request",
@@ -22,6 +23,7 @@
   "blocks.question-classifier": "Question Classifier",
   "blocks.start": "User Input",
   "blocks.template-transform": "Template",
+  "blocks.tool": "Tool",
   "blocks.trigger-plugin": "Plugin Trigger",
   "blocks.trigger-schedule": "Schedule Trigger",
   "blocks.trigger-webhook": "Webhook Trigger",
@@ -32,21 +34,25 @@
   "blocksAbout.assigner": "The variable assignment node is used for assigning values to writable variables(like conversation variables).",
   "blocksAbout.code": "Execute a piece of Python or NodeJS code to implement custom logic",
   "blocksAbout.datasource": "Data Source About",
+  "blocksAbout.datasource-empty": "Empty Data Source placeholder",
   "blocksAbout.document-extractor": "Used to parse uploaded documents into text content that is easily understandable by LLM.",
   "blocksAbout.end": "Define the output and result type of a workflow",
   "blocksAbout.http-request": "Allow server requests to be sent over the HTTP protocol",
   "blocksAbout.if-else": "Allows you to split the workflow into two branches based on if/else conditions",
   "blocksAbout.iteration": "Perform multiple steps on a list object until all results are outputted.",
+  "blocksAbout.iteration-start": "Iteration Start node",
   "blocksAbout.knowledge-index": "Knowledge Base About",
   "blocksAbout.knowledge-retrieval": "Allows you to query text content related to user questions from the Knowledge",
   "blocksAbout.list-operator": "Used to filter or sort array content.",
   "blocksAbout.llm": "Invoking large language models to answer questions or process natural language",
   "blocksAbout.loop": "Execute a loop of logic until the termination condition is met or the maximum loop count is reached.",
   "blocksAbout.loop-end": "Equivalent to \"break\". This node has no configuration items. When the loop body reaches this node, the loop terminates.",
+  "blocksAbout.loop-start": "Loop Start node",
   "blocksAbout.parameter-extractor": "Use LLM to extract structured parameters from natural language for tool invocations or HTTP requests.",
   "blocksAbout.question-classifier": "Define the classification conditions of user questions, LLM can define how the conversation progresses based on the classification description",
   "blocksAbout.start": "Define the initial parameters for launching a workflow",
   "blocksAbout.template-transform": "Convert data to string using Jinja template syntax",
+  "blocksAbout.tool": "Use external tools to extend workflow capabilities",
   "blocksAbout.trigger-plugin": "Third-party integration trigger that starts workflows from external platform events",
   "blocksAbout.trigger-schedule": "Time-based workflow trigger that starts workflows on a schedule",
   "blocksAbout.trigger-webhook": "Webhook Trigger receives HTTP pushes from third-party systems to automatically trigger workflows.",
