--- a/web/i18n/en-US/tools.json
+++ b/web/i18n/en-US/tools.json
@@ -1,6 +1,11 @@
 {
   "addToolModal.added": "added",
+  "addToolModal.agent.tip": "",
   "addToolModal.agent.title": "No agent strategy available",
+  "addToolModal.all.tip": "",
+  "addToolModal.all.title": "No tools available",
+  "addToolModal.built-in.tip": "",
+  "addToolModal.built-in.title": "No built-in tool available",
   "addToolModal.category": "category",
   "addToolModal.custom.tip": "Create a custom tool",
   "addToolModal.custom.title": "No custom tool available",
@@ -34,6 +39,7 @@
   "createTool.authMethod.type": "Authorization type",
   "createTool.authMethod.types.apiKeyPlaceholder": "HTTP header name for API Key",
   "createTool.authMethod.types.apiValuePlaceholder": "Enter API Key",
+  "createTool.authMethod.types.api_key": "API Key",
   "createTool.authMethod.types.api_key_header": "Header",
   "createTool.authMethod.types.api_key_query": "Query Param",
   "createTool.authMethod.types.none": "None",
