--- a/web/i18n/zh-Hans/dataset.json
+++ b/web/i18n/zh-Hans/dataset.json
@@ -8,6 +8,7 @@
   "batchAction.delete": "删除",
   "batchAction.disable": "禁用",
   "batchAction.enable": "启用",
+  "batchAction.reIndex": "重新索引",
   "batchAction.selected": "已选择",
   "chunkingMode.general": "通用",
   "chunkingMode.graph": "图",
