--- a/web/i18n/ja-JP/dataset-documents.json
+++ b/web/i18n/ja-JP/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "ノルウェー語",
   "metadata.languageMap.pl": "ポーランド語",
   "metadata.languageMap.pt": "ポルトガル語",
+  "metadata.languageMap.ro": "ルーマニア語",
   "metadata.languageMap.ru": "ロシア語",
   "metadata.languageMap.sv": "スウェーデン語",
   "metadata.languageMap.th": "タイ語",
