--- a/web/i18n/ja-JP/dataset.json
+++ b/web/i18n/ja-JP/dataset.json
@@ -8,6 +8,7 @@
   "batchAction.delete": "削除",
   "batchAction.disable": "無効にする",
   "batchAction.enable": "有効にする",
+  "batchAction.reIndex": "再インデックス",
   "batchAction.selected": "選択済み",
   "chunkingMode.general": "汎用",
   "chunkingMode.graph": "グラフ",
@@ -88,6 +89,7 @@
   "indexingMethod.full_text_search": "フルテキスト検索",
   "indexingMethod.hybrid_search": "ハイブリッド検索",
   "indexingMethod.invertedIndex": "転置",
+  "indexingMethod.keyword_search": "キーワード",
   "indexingMethod.semantic_search": "ベクトル検索",
   "indexingTechnique.economy": "経済",
   "indexingTechnique.high_quality": "高品質",
@@ -154,6 +156,8 @@
   "retrieval.hybrid_search.description": "全文検索とベクトル検索を同時に実行し、ユーザーのクエリに最適なマッチを選択するために Rerank 付けを行います。Rerank モデル API の設定が必要です。",
   "retrieval.hybrid_search.recommend": "推奨",
   "retrieval.hybrid_search.title": "ハイブリッド検索",
+  "retrieval.invertedIndex.description": "転置インデックスは、効率的な検索のための構造です。用語ごとに整理され、各用語はそれを含むドキュメントまたはWebページを指します。",
+  "retrieval.invertedIndex.title": "転置インデックス",
   "retrieval.keyword_search.description": "逆インデックスは効率的な検索のために使用される構造です。用語によって整理されており、各用語はそれを含む文書やウェブページを指し示します。",
   "retrieval.keyword_search.title": "逆インデックス",
   "retrieval.semantic_search.description": "クエリの埋め込みを生成し、そのベクトル表現に最も類似したテキストチャンクを検索します。",
