--- a/web/i18n/ja-JP/explore.json
+++ b/web/i18n/ja-JP/explore.json
@@ -12,6 +12,7 @@
   "category.Entertainment": "エンターテイメント",
   "category.HR": "人事",
   "category.Programming": "プログラミング",
+  "category.Recommended": "推奨",
   "category.Translate": "翻訳",
   "category.Workflow": "ワークフロー",
   "category.Writing": "執筆",
