--- a/web/i18n/ja-JP/tools.json
+++ b/web/i18n/ja-JP/tools.json
@@ -1,6 +1,11 @@
 {
   "addToolModal.added": "追加済",
+  "addToolModal.agent.tip": "",
   "addToolModal.agent.title": "Agent strategy は利用できません",
+  "addToolModal.all.tip": "",
+  "addToolModal.all.title": "利用可能なツールはありません",
+  "addToolModal.built-in.tip": "",
+  "addToolModal.built-in.title": "利用可能な組み込みツールはありません",
   "addToolModal.category": "カテゴリー",
   "addToolModal.custom.tip": "カスタムツールを作成する",
   "addToolModal.custom.title": "カスタムツールはありません",
@@ -34,6 +39,7 @@
   "createTool.authMethod.type": "認証タイプ",
   "createTool.authMethod.types.apiKeyPlaceholder": "API キーの HTTP ヘッダー名",
   "createTool.authMethod.types.apiValuePlaceholder": "API キーを入力してください",
+  "createTool.authMethod.types.api_key": "API キー",
   "createTool.authMethod.types.api_key_header": "ヘッダー",
   "createTool.authMethod.types.api_key_query": "クエリパラメータ",
   "createTool.authMethod.types.none": "なし",
