--- a/web/i18n/ja-JP/workflow.json
+++ b/web/i18n/ja-JP/workflow.json
@@ -4,6 +4,7 @@
   "blocks.assigner": "変数代入",
   "blocks.code": "コード実行",
   "blocks.datasource": "データソース",
+  "blocks.datasource-empty": "空のデータソース",
   "blocks.document-extractor": "テキスト抽出",
   "blocks.end": "出力",
   "blocks.http-request": "HTTP リクエスト",
@@ -22,6 +23,7 @@
   "blocks.question-classifier": "質問分類器",
   "blocks.start": "ユーザー入力",
   "blocks.template-transform": "テンプレート",
+  "blocks.tool": "ツール",
   "blocks.trigger-plugin": "プラグイントリガー",
   "blocks.trigger-schedule": "スケジュールトリガー",
   "blocks.trigger-webhook": "Webhook トリガー",
@@ -32,21 +34,25 @@
   "blocksAbout.assigner": "書き込み可能な変数（例：会話変数）への値の割り当てを行います。",
   "blocksAbout.code": "Python/NodeJS コードを実行してカスタムロジックを実装します。",
   "blocksAbout.datasource": "データソースについて",
+  "blocksAbout.datasource-empty": "空のデータソースのプレースホルダー",
   "blocksAbout.document-extractor": "アップロード文書を LLM 処理用に最適化されたテキストに変換します。",
   "blocksAbout.end": "ワークフローの出力と結果のタイプを定義します",
   "blocksAbout.http-request": "HTTP リクエストを送信できます。",
   "blocksAbout.if-else": "if/else 条件でワークフローを 2 つの分岐に分割します。",
   "blocksAbout.iteration": "リスト要素に対して反復処理を実行し全結果を出力します。",
+  "blocksAbout.iteration-start": "反復開始ノード",
   "blocksAbout.knowledge-index": "知識ベースについて",
   "blocksAbout.knowledge-retrieval": "ナレッジベースからユーザー質問に関連するテキストを検索します。",
   "blocksAbout.list-operator": "配列のフィルタリングやソート処理を行います。",
   "blocksAbout.llm": "大規模言語モデルを呼び出して質問回答や自然言語処理を実行します。",
   "blocksAbout.loop": "終了条件達成まで、または最大反復回数までロジックを繰り返します。",
   "blocksAbout.loop-end": "「break」相当の機能です。このノードに設定項目はなく、ループ処理中にこのノードに到達すると即時終了します。",
+  "blocksAbout.loop-start": "ループ開始ノード",
   "blocksAbout.parameter-extractor": "自然言語から構造化パラメータを抽出し、後続処理で利用します。",
   "blocksAbout.question-classifier": "質問の分類条件を定義し、LLM が分類に基づいて対話フローを制御します。",
   "blocksAbout.start": "ワークフロー開始時の初期パラメータを定義します。",
   "blocksAbout.template-transform": "Jinja テンプレート構文でデータを文字列に変換します。",
+  "blocksAbout.tool": "外部ツールを使用してワークフローの機能を拡張する",
   "blocksAbout.trigger-plugin": "サードパーティ統合トリガー、外部プラットフォームのイベントによってワークフローを開始します",
   "blocksAbout.trigger-schedule": "スケジュールに基づいてワークフローを開始する時間ベースのトリガー",
   "blocksAbout.trigger-webhook": "Webhook トリガーは第三者システムからの HTTP プッシュを受信してワークフローを自動的に開始します。",
@@ -507,6 +513,8 @@
   "nodes.ifElse.comparisonOperator.in": "含まれている",
   "nodes.ifElse.comparisonOperator.is": "である",
   "nodes.ifElse.comparisonOperator.is not": "でない",
+  "nodes.ifElse.comparisonOperator.is not null": "null ではない",
+  "nodes.ifElse.comparisonOperator.is null": "ヌルです",
   "nodes.ifElse.comparisonOperator.not contains": "含まない",
   "nodes.ifElse.comparisonOperator.not empty": "空でない",
   "nodes.ifElse.comparisonOperator.not exists": "存在しません",
@@ -971,6 +979,8 @@
   "singleRun.startRun": "実行開始",
   "singleRun.testRun": "テスト実行",
   "singleRun.testRunIteration": "テスト実行（イテレーション）",
+  "singleRun.testRunLoop": "テスト実行ループ",
+  "tabs.-": "デフォルト",
   "tabs.addAll": "すべてを追加する",
   "tabs.agent": "エージェント戦略",
   "tabs.allAdded": "すべて追加されました",
