--- a/web/i18n/zh-Hans/dataset-documents.json
+++ b/web/i18n/zh-Hans/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "挪威语",
   "metadata.languageMap.pl": "波兰语",
   "metadata.languageMap.pt": "葡萄牙语",
+  "metadata.languageMap.ro": "罗马尼亚语",
   "metadata.languageMap.ru": "俄语",
   "metadata.languageMap.sv": "瑞典语",
   "metadata.languageMap.th": "泰语",
