--- a/web/i18n/zh-Hans/dataset.json
+++ b/web/i18n/zh-Hans/dataset.json
@@ -89,6 +89,7 @@
   "indexingMethod.full_text_search": "全文检索",
   "indexingMethod.hybrid_search": "混合检索",
   "indexingMethod.invertedIndex": "倒排索引",
+  "indexingMethod.keyword_search": "关键词",
   "indexingMethod.semantic_search": "向量检索",
   "indexingTechnique.economy": "经济",
   "indexingTechnique.high_quality": "高质量",
@@ -155,6 +156,8 @@
   "retrieval.hybrid_search.description": "同时执行全文检索和向量检索，并应用重排序步骤，从两类查询结果中选择匹配用户问题的最佳结果，用户可以选择设置权重或配置重新排序模型。",
   "retrieval.hybrid_search.recommend": "推荐",
   "retrieval.hybrid_search.title": "混合检索",
+  "retrieval.invertedIndex.description": "倒排索引是一种用于高效检索的结构。按术语组织，每个术语指向包含它的文档或网页。",
+  "retrieval.invertedIndex.title": "倒排索引",
   "retrieval.keyword_search.description": "倒排索引是一种用于高效检索的结构。按术语组织，每个术语指向包含它的文档或网页",
   "retrieval.keyword_search.title": "倒排索引",
   "retrieval.semantic_search.description": "通过生成查询嵌入并查询与其向量表示最相似的文本分段",
