--- a/web/i18n/zh-Hans/explore.json
+++ b/web/i18n/zh-Hans/explore.json
@@ -12,6 +12,7 @@
   "category.Entertainment": "娱乐",
   "category.HR": "人力资源",
   "category.Programming": "编程",
+  "category.Recommended": "推荐",
   "category.Translate": "翻译",
   "category.Workflow": "工作流",
   "category.Writing": "写作",
