--- a/web/i18n/zh-Hans/tools.json
+++ b/web/i18n/zh-Hans/tools.json
@@ -1,6 +1,11 @@
 {
   "addToolModal.added": "已添加",
+  "addToolModal.agent.tip": "",
   "addToolModal.agent.title": "没有可用的 agent 策略",
+  "addToolModal.all.tip": "",
+  "addToolModal.all.title": "没有可用的工具",
+  "addToolModal.built-in.tip": "",
+  "addToolModal.built-in.title": "没有可用的内置工具",
   "addToolModal.category": "类别",
   "addToolModal.custom.tip": "创建自定义工具",
   "addToolModal.custom.title": "没有可用的自定义工具",
@@ -34,6 +39,7 @@
   "createTool.authMethod.type": "鉴权类型",
   "createTool.authMethod.types.apiKeyPlaceholder": "HTTP 头部名称，用于传递 API Key",
   "createTool.authMethod.types.apiValuePlaceholder": "输入 API Key",
+  "createTool.authMethod.types.api_key": "API 密钥",
   "createTool.authMethod.types.api_key_header": "请求头",
   "createTool.authMethod.types.api_key_query": "查询参数",
   "createTool.authMethod.types.none": "无",
