feat: Add Romanian language to dataset documents and an empty price tip for community billing plans.

--- a/web/i18n/de-DE/dataset-documents.json
+++ b/web/i18n/de-DE/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Norwegisch",
   "metadata.languageMap.pl": "Polnisch",
   "metadata.languageMap.pt": "Portugiesisch",
+  "metadata.languageMap.ro": "Rumänisch",
   "metadata.languageMap.ru": "Russisch",
   "metadata.languageMap.sv": "Schwedisch",
   "metadata.languageMap.th": "Thai",
