--- a/web/i18n/es-ES/dataset-documents.json
+++ b/web/i18n/es-ES/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Noruego",
   "metadata.languageMap.pl": "Polaco",
   "metadata.languageMap.pt": "Portugués",
+  "metadata.languageMap.ro": "Rumano",
   "metadata.languageMap.ru": "Ruso",
   "metadata.languageMap.sv": "Sueco",
   "metadata.languageMap.th": "Tailandés",
