--- a/web/i18n/pt-BR/dataset-documents.json
+++ b/web/i18n/pt-BR/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Norueguês",
   "metadata.languageMap.pl": "Polonês",
   "metadata.languageMap.pt": "Português",
+  "metadata.languageMap.ro": "Romeno",
   "metadata.languageMap.ru": "Russo",
   "metadata.languageMap.sv": "Sueco",
   "metadata.languageMap.th": "Tailandês",
