--- a/web/i18n/ro-RO/dataset-documents.json
+++ b/web/i18n/ro-RO/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Norvegiană",
   "metadata.languageMap.pl": "Poloneză",
   "metadata.languageMap.pt": "Portugheză",
+  "metadata.languageMap.ro": "Română",
   "metadata.languageMap.ru": "Rusă",
   "metadata.languageMap.sv": "Suedeză",
   "metadata.languageMap.th": "Tailandeză",
