--- a/web/i18n/ru-RU/dataset-documents.json
+++ b/web/i18n/ru-RU/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Норвежский",
   "metadata.languageMap.pl": "Польский",
   "metadata.languageMap.pt": "Португальский",
+  "metadata.languageMap.ro": "румынский",
   "metadata.languageMap.ru": "Русский",
   "metadata.languageMap.sv": "Шведский",
   "metadata.languageMap.th": "Тайский",
