--- a/web/i18n/th-TH/dataset-documents.json
+++ b/web/i18n/th-TH/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "นอร์เวย์",
   "metadata.languageMap.pl": "โปแลนด์",
   "metadata.languageMap.pt": "โปรตุเกส",
+  "metadata.languageMap.ro": "โรมาเนีย",
   "metadata.languageMap.ru": "รัสเซีย",
   "metadata.languageMap.sv": "สวีเดน",
   "metadata.languageMap.th": "ไทย",
