--- a/web/i18n/fr-FR/dataset-documents.json
+++ b/web/i18n/fr-FR/dataset-documents.json
@@ -247,6 +247,7 @@
   "metadata.languageMap.no": "Norvégien",
   "metadata.languageMap.pl": "Polonais",
   "metadata.languageMap.pt": "Portugais",
+  "metadata.languageMap.ro": "Roumain",
   "metadata.languageMap.ru": "Russe",
   "metadata.languageMap.sv": "Suédois",
   "metadata.languageMap.th": "Thaï",
